Fixing layout issues in Main, Home, and Carousels

--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -156,7 +156,6 @@ body,
   max-width: 100%;
   grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
   gap: 1rem;
-  margin: 0 1rem;
   article {
     cursor: pointer;
   }
