--- a/src/assets/styles/components/common/carousels/genericSwiperCarousel.scss
+++ b/src/assets/styles/components/common/carousels/genericSwiperCarousel.scss
@@ -1,8 +1,7 @@
 .generic-carousel {
   color: #fff;
-  max-width: calc(100vw - 4rem);
+  max-width: calc(100vw - 2rem);
   min-height: max-content;
-  // border: 2px solid #fff;
   border-radius: 8px;
   .swiper_wrap {
     position: relative;
