--- a/src/assets/styles/components/entities/items/_item-preview.scss
+++ b/src/assets/styles/components/entities/items/_item-preview.scss
@@ -1,6 +1,6 @@
 .item-preview {
   padding: 0.5rem;
-  margin: 0.5rem;
+  // margin: 0.5rem;
   height: 240px;
   max-width: 450px;
   gap: 0.5rem;
