--- a/src/assets/styles/components/entities/studios/studio-preview.scss
+++ b/src/assets/styles/components/entities/studios/studio-preview.scss
@@ -3,7 +3,7 @@
   min-height: 340px;
   padding: 0 0.5rem 0.5rem 0.5rem;
   max-width: 1200px !important;
-  margin: 0.5rem;
+  // margin: 0.5rem;
   gap: 0.5rem;
   h2 {
     white-space: nowrap !important;
